menambakan dasar tag website

--- a/indesx.html
+++ b/indesx.html
@@ -1,1 +1,10 @@
-Hello Komang
+    <!DOCTYPE html>
+    <html>
+      <head>
+      </head>
+     
+      <body>
+        Hello Komang
+      </body>
+     
+    </html>
