Changed Hello world with img and h2 to display simple profile data. Image file added in the folder images and used as resource in the img element in index.html file

--- a/indesx.html
+++ b/indesx.html
@@ -5,7 +5,10 @@
   </head>
 
   <body>
-    Hello Komang
+    <div>
+      <img src="Admin.png" alt="profile image" />
+      <h2>Balinisse</h2>
+    </div>
   </body>
 
   </html>
