Added ids for each profile element

--- a/indesx.html
+++ b/indesx.html
@@ -6,8 +6,8 @@
 
   <body>
     <div>
-      <img src="Admin.png" alt="profile image" />
-      <h2>Balinisse</h2>
+      <img id="profile-image" src="Admin.png" alt="profile image" />
+      <h2 id="profile-name">Balinisse</h2>
     </div>
   </body>
 
