added initial style.css to style the profile

--- a/indesx.html
+++ b/indesx.html
@@ -2,11 +2,12 @@
   <html>
 
   <head>
+      <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
     <div>
-      <img id="profile-image" src="Admin.png" alt="profile image" />
+      <img id="profile-image" src="Admin.png" alt="profile image"/>
       <h2 id="profile-name">Balinisse</h2>
     </div>
   </body>
