--- a/indesx.html
+++ b/indesx.html
@@ -9,6 +9,9 @@
     <div>
       <img id="profile-image" src="Admin.png" alt="profile image"/>
       <h2 id="profile-name">Balinisse</h2>
+      <ul>
+        <li>Bullet</li>
+      </ul>
     </div>
   </body>
 
